# project25

./: LICENSE  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml
app/: globals.css  page.tsx
app/dashboard/: page.tsx
apps/api/: admin.py  database.py  main.py  models.py  tasks.py  worker.py
data/seeds/: energy_entities.json  tesla_entities.json
infra/docker/: Dockerfile.api  Dockerfile.scheduler  Dockerfile.worker
infra/k8s/argo-rollouts/: rollout.yaml
infra/k8s/helm/energy-cost/: Chart.yaml  values.yaml
infra/k8s/helm/energy-cost/templates/: deployment-api.yaml
infra/monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
infra/terraform/: main.tf  monitoring.tf  outputs.tf  variables.tf
infra/terraform/modules/vpc/: main.tf
ops/dashboards/: energy-cost-overview.json
scripts/: 001_initial_schema.sql  001_monitoring_schema.sql  002_seed_energy_entities.sql  002_seed_tesla_entities.sql  003_ops_audit_table.sql
