[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "energy-cost-system"
version = "0.1.0"
description = "Comprehensive energy cost analysis system with LCOE/LCOS computation"
authors = ["Energy Cost Team <team@energycost.dev>"]
readme = "README.md"
packages = [
    {include = "packages"},
    {include = "apps"}
]

[tool.poetry.dependencies]
python = "^3.11"
# API Framework
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Database
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
alembic = "^1.13.0"
pgvector = "^0.2.4"

# Task Queue
celery = {extras = ["redis"], version = "^5.3.4"}
redis = "^5.0.1"

# HTTP Client & Web Scraping
httpx = "^0.25.2"
beautifulsoup4 = "^4.12.2"
trafilatura = "^1.6.4"
robotparser = "^1.0.0"

# Search & Embeddings
opensearch-py = "^2.4.2"
openai = "^1.3.7"

# Object Storage
boto3 = "^1.34.0"
minio = "^7.2.0"

# Data Processing
pandas = "^2.1.4"
numpy = "^1.25.2"
scipy = "^1.11.4"

# Observability
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
opentelemetry-instrumentation-sqlalchemy = "^0.42b0"
prometheus-client = "^0.19.0"

# Utilities
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=packages --cov=apps"
